# deep-organize

./: README.md  pyproject.toml
config/: organize.yaml
config/network/: boxes.yaml  points.yaml
deep_organize/: datasets.py  loss.py  networks.py  utils.py
examples/: organize.py
tests/: test_loss.py
