[tool.poetry]
name = "deep-organize"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.0"
high-order-layers-torch = "^1.1.18"
high-order-implicit-representation = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
